<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Uasd-Bani</string>
    <!--Content Image-->
    <string name="textContentImage">Content Image</string>

    <!--Pantalla Login-->
    <string name="textHintCorreo">Correo</string>
    <string name="textClave">Contraseña</string>
    <string name="textAcceder">Acceder</string>
    <string name="textNoRegistrado">¿No estas Registrado?</string>
    <string name="textRegistraste">Regístrate</string>
    <string name="textTambienPuedesAcceder">Acceder con Google</string>
    <string name="textResetClave">¿Se te olvidó tu contraseña?</string>
    <!--Pantalla Registro usuario-->
    <string name="textToolbarRegistroUsuario">Registro</string>
    <string name="textRegistroTitulo">Bienvenido</string>
    <string name="hintTextPrimerNombre">Nombre</string>
    <string name="hintTextPrimerApellido">Apellido</string>
    <string name="hintTextCorreo">Correo</string>
    <string name="hintTextFacultad">Facultad</string>
    <string name="textGoogle">Continuar con Google</string>
    <string name="textEditar">Editar</string>
    <string name="textActualizar">Actualizar</string>
    <string name="hintTextCarrera">Carrera</string>
    <string name="hintTextContraseña">Contraseña</string>
    <string name="hintTextConfirmarContraseña">Confirmar contraseña</string>
    <!--Recursos-->
    <string name="textContentDescription">Content Description</string>
    <string name="title_activity_nav_menu_principal">NavMenuPrincipal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!--Nav Menu-->
    <string name="menu_listado_materias_horarios">Materias y horarios</string>
    <string name="menu_informacion">Información</string>
    <string name="menu_mapa">Mapa UASD-BANI</string>
    <string name="menu_cerrar_sesion">Cerrar sesión</string>
    <string name="menu_mi_perfil">Mi Perfil</string>
    <!--Botones dialogos-->
    <string name="textAceptarDialogo">Aceptar</string>
    <string name="textCancelarDialogo">Cancelar</string>
    <!--Nav Header-->
    <string name="textNombreCompletoUser">Nombre Completo usuario</string>
    <string name="textCorreoUsuario">Correo usuario</string>
    <string name="textOtrosDatosUsuario">Otros datos</string>
    <!--Cerrar Sesion-->
    <string name="textTituloCerrarSesion">¿Esta seguro que desea cerrar sesión?</string>
    <!--Dialogo Progress Bar-->
    <string name="textMensajePorgressBar" tools:ignore="Typos">Por favor espere</string>
    <string name="textProcesandoDialogo">Procesando…</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--Btn Menu-->
    <string name="btnOpen">Abierto</string>
    <string name="btnClose">Cerrado</string>
    <!--Menu imagenes-->
    <string name="menuTomarFoto">Cámara</string>
    <string name="menuGaleria">Galería </string>
    <!--Informacion-->
    <string name="textInfoNoticiasUASD">Información centro</string>
    <string name="textInfoEstudianteUASD">Información estudiantes</string>
    <string name="textSeleccNoticia">Seleccione el tipo de noticias que le interesa visualizar
    </string>
  <string name="textInfoContacto">
CONTACTOS
Calle Uladislao Guerrero No. 2 Esquina C/ Duarte (Antiguo Café Vaganiona), Bani.
Teléfonos: 809 522-5174
                  809 380-0132
email: curban@uasd.edu.do
Laboramos de 8:00 a.m. a 7:00 p.m.
  </string>
    <string name="textInfoParrajoInfo1">
        La UASD Centro Baní, uno de los Benjamines, fue fundado el 19 de Febrero del 2008, con el
        esfuerzode hombres y mujeres, visionarios, convencidos de la necesidad de crear una unidad
        académica que le permitiera a la juventud de la región Valdesia realizar diferentes carreras
        Universitarias.Las labores administrativas de la UASD Centro Baní iniciaron el 01 de
        Junio del 2010 en la oficinade la casa no. 02 de la Calle Uladislao Guerrero.
        La docencia, a su vez inicio el 27 de septiembre del mismo año, en rectoría
        del Dr. Franklin García Fermín.La UASD Centro Baní, da acogida a jóvenes de
        diferentes extractos sociales, cubriendo
        la población estudiantil de las zonas rurales, barrios, pueblos y municipios
        de tres provincias periféricas ( Peravia, San José de Ocoa y Azua), logrando
        de esta manera que todos aquellos jóvenes que no tienen la oportunidad de
        trasladarse a cursar sus estudios a la Sede en Santo Domingo y conociendo
        la trascendencia académica de nuestra Universidad deciden formarse como
        profesionales y dar lo mejor de sí mismos en beneficio del desarrollo de la sociedad
        Dominicana.Desde el surgimiento de la UASD Baní, ha venido realizando grandes
        transformaciones,las cuales le han permitido una evolución y desarrollo constante.
        Realiza funcionesde docencia, investigación y extensión.

        La UASD Centro Baní, aporta soluciones sociales pertinentes, insertando a los estudiantes al
        mercado productivo laboral, aumentando la población económicamente activa,
        disminuyendo el analfabetismo, la mortalidad infantil y maternal, siendo
        testigo de la evolución y crecimiento de la provincia Peravia, creando las
        bases para el desarrollo sostenible de la Región Valdesia con la participación
        e integración de la comunidad.
    </string>

    <string name="textInfoParrajoInfo2">
        FEDERACIÓN DE ESTUDIANTES DOMINICANOS UASD-BANÍ

        Este grupo estudiantil, fue creado con el fin de mantenernos informados de las
        actividades uasdianas, mantener unidos a tod@s en un mismo lugar donde puedan informarse,
        Responder, Preguntar, compartir, opinar, Etc.
    </string>
    <string name="textGuardar"> Guardar</string>

    <!--Listado de materias y horarios-->
    <string name="textTituloMateria">Materia:</string>
    <string name="textValueMateria">"@materia"</string>
    <string name="textTituloProfesor" tools:ignore="Typos">Profesor:</string>
    <string name="textValueProfesor" tools:ignore="Typos">"@profesor"</string>
    <string name="textTituloSeccion">Sección:</string>
    <string name="textValueSeccion">"@seccion"</string>
    <string name="textTituloLugar">Lugar:</string>
    <string name="textValueLugar">"@lugar"</string>
    <string name="textTituloAula">Aula:</string>
    <string name="textValueAula">"@aula"</string>
    <string name="textVerUbicacion">Ver ubicación</string>
    <string name="textTituloFacultadCarrera">Materias:Facultad:</string>
    <!--Filtro Reporte-->
    <string name="textTituloDialogoFiltroRpt">Favor seleccionar el tipo de filtro que deseas aplicar
    </string>
    <string name="textFiltrarxFacultad">Facultad</string>
    <string name="textSiguiente">Siguiente</string>
    <string name="textFiltroTituloPrincipal">Filtrar por @nombreFiltro</string>
    <string name="textBtnAplicar">Aplicar</string>
    <!--Mapa busqueda Lugares-->
    <string name="textHintLugarBusqueda">Seleccione el lugar o ubicacion</string>
    <string name="textLocalidadUASDBANI">UASD BANI</string>
    <string name="textLocalidadEdificiojulieta">Edificio julieta</string>
    <string name="textLocalidadEdificioCarlosserret">Edificio Carlos Serret</string>
    <string name="textLocalidadEscuelaCabral">Escuela Aquiles Cabral</string>
    <string name="textLocalidadLiceoBillini">Liceo Francisco Gregorio Billini</string>
    <!--Mapas estilo-->
    <string name="textEstiloNormal">Mapa</string>
    <string name="textEstiloSatelite">Satélite</string>
    <!-- ID CLIENTE OUTH 2.0-->
    <string name="textOauthID">405743454899-a74a857ci4e9jcmeesnsr4u7tq08fj7o.apps.googleusercontent.com</string>
    <string name="textTituloResetClave">Olvidaste tu contraseña?</string>
    <string name="textSubtituloResetClave">solo necesitamos su ID de correo electrónico registrado para
        enviarle instrucciones para restablecer la contraseña.</string>
    <string name="textResetClaveBtn">REINICIAR CONTRASEÑA</string>
    <string name="textAtras">Atrás</string>

</resources>