<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_listado_materias"
            android:icon="@drawable/ic_baseline_list_alt_24"
            android:title="@string/menu_listado_materias_horarios" />
        <item
            android:id="@+id/nav_informacion"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/menu_informacion" />
        <item
            android:id="@+id/nav_mapa"
            android:icon="@drawable/ic_baseline_map_24"
            android:title="@string/menu_mapa" />

        <item
            android:id="@+id/nav_mi_perfil"
            android:icon="@drawable/ic_baseline_emoji_people_24"
            android:title="@string/menu_mi_perfil" />

    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_cerrar_sesion"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/menu_cerrar_sesion"/>
    </group>

</menu>